Fix CSS : Button margin when collapse

--- a/src/app/frais/liste-frais/liste-frais.component.css
+++ b/src/app/frais/liste-frais/liste-frais.component.css
@@ -83,7 +83,6 @@
 	border-radius: 5px;
 	padding: 4px;
 	background-color: rgba(56, 56, 56, 0.95);
-	margin: 0 auto;
 }
 
 .button i {
